...
      if (showTabBar) showTabBar();
    }
    navigation.navigate('examList');
  }

  return (
    <RNAnimated.View testID="screen-score-warning" style={{ flex: 1, opacity: bgOpacity, backgroundColor: '#8B5CF6' }}>
      <StatusBar barStyle="light-content" backgroundColor="#8B5CF6" />
      <VStack flex={1} space={8} py={24}>
        {/* Imagem */}
        <RNAnimated.View style={{ opacity: imageOpacity, transform: [{ translateY: imageTranslateY }] }}>
          <Image source={Vector} defaultSource={Vector} alt="X examinus Logo" resizeMode="stretch" w="100%" h={400} />
        </RNAnimated.View>
...
            </Text>
          </RNAnimated.View>

          {/* Botão */}
          <RNAnimated.View style={{ opacity: buttonOpacity, transform: [{ translateY: buttonTranslateY }] }}>
            <Button
              testID="btn-score-continue"
              variant="outline"
              size="md"
              title="Bora ficar saudável"
              icon={<ArrowIcon />}
              mt={6}
              onPress={handleGoToHomepage}
...
