...
          <Text fontSize={14} fontWeight={500} lineHeight={22.4} color="gray.300" textAlign="center" mt={2}>
            Selecione a opção abaixo para que{'\n'}
            possamos simplificar sua saúde:
          </Text>

          <HStack space={4} mt={8} mb={4}>
            <TouchableOpacity testID="btn-upload-pdf" onPress={handleSelectFile}>
              <Box
                bg="ciano.300"
                w={40}
                h={20}
                py={2}
                px={4}
...
                <Text fontSize={18} fontWeight={700} letterSpacing={-0.18} color="white" mt={1}>
                  PDF
                </Text>
              </Box>
            </TouchableOpacity>

            <TouchableOpacity testID="btn-upload-image" onPress={onCameraOpen}>
              <Box w={40} h={20} py={2} px={4} rounded="2xl" alignItems="center" borderWidth={4} borderColor="gray.50">
                <EditIcon color="#052B3B" />
                <Text fontSize={18} fontWeight={700} letterSpacing={-0.18} color="gray.400" mt={1}>
                  Imagem
                </Text>
              </Box>
...
