...
import { Button } from '@components/atoms';

export function Hello() {
  const navigation = useNavigation<AuthNavigatorRoutesProps>();

  return (
    <Flex justify="space-evenly" h="100%" mt={8} testID="screen-welcome">
      <Image source={Vector} alt="Vetor" resizeMode="stretch" position="absolute" bottom={230} w="100%" h="35%" />

      <Center>
        <LogoSvg />

        <Text
...

        <HStack alignItems="center" justifyContent="center" mt={4}>
          <Text fontSize={14} color="gray.400" fontWeight={600} letterSpacing={-0.14}>
            Já tem uma conta?
          </Text>

          <TouchableOpacity testID="btn-go-to-login" onPress={() => navigation.navigate('signIn')}>
            <Text fontSize={16} color="purple.600" fontWeight={800} lineHeight={38} underline letterSpacing={-0.14}>
              {' '}
              Conecte-se.
            </Text>
          </TouchableOpacity>
        </HStack>
...
